# small-mqtt-client-in-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: protocol.h  smqttc.h  smqttc_mt.h
libsmqttclient/: CMakeLists.txt  smqttc.c  smqttc_internal.h
libsmqttclient_mt/: CMakeLists.txt  README.md  connection.c  connection.h  smqttc_mt.c  smqttc_mt_internal.h
libsmqttcore/: CMakeLists.txt  local_server.c  messages.c  messages.h  messages_internal.h  network_server.c  server.c  server.h
libtest/: CMakeLists.txt  runner.c  runner.h  test_macros.h
smqttc/: CMakeLists.txt  main.c
test/: CMakeLists.txt  client.c  encoding.c  main.c  serialization.c  test_definitions.txt
test_mt/: CMakeLists.txt  client.c  main.c  test_definitions.txt
